# aglass

./: .env.example  .gitignore  PROJECT_MEMORY.md  pyproject.toml
.github/workflows/: test.yml
configs/: device.yaml
docs/: SKILL.md
models/: .gitkeep
scripts/: .gitkeep  deploy_rpi.sh  export_summary.py  functional_test.py  hardware_test.sh  run_1a_capture.sh  test_af_lock.py
src/: __init__.py  config.py
src/api/: routes_cam_b.py  routes_camera.py  routes_capture.py  routes_health.py  routes_inference.py  routes_profile.py  server.py
src/camera/: __init__.py  af_control.py  cam_a.py  cam_b.py  cam_base.py
src/inference/: __init__.py  models.py  runner.py
src/pipeline/: __init__.py  burst_coordinator.py  capture_loop.py
src/store/: __init__.py  db.py  file_store.py  models.py  repo.py
src/utils/: __init__.py  logger.py  sysinfo.py  time_id.py
tests/: conftest.py  test_af_control.py  test_api_cam_b.py  test_api_camera.py  test_api_capture.py  test_api_health.py  test_api_inference.py  test_api_profile.py  test_burst_coordinator.py  test_cam_a.py  test_cam_b.py  test_camera_base.py  test_capture_loop.py  test_config.py  test_e2e_pipeline.py  test_inference_models.py  test_inference_runner.py  test_store_db.py  test_store_file_store.py  test_store_models.py  test_store_repo.py  test_utils.py
training/: README.md  download_datasets.py  export_models.py  filter_dataset.py  requirements.txt  train_flower_detector.py  train_plant_detector.py  validate_models.py
training/configs/: flower_detector.yaml  plant_detector.yaml
